# iqpuzzle

./: .appveyor.yml  .bzrignore  .gitignore  .transifex.yml  .travis.yml  CBlock.cpp  CBlock.h  CBoard.cpp  CBoard.h  CBoardDialog.cpp  CBoardDialog.h  CHighscore.cpp  CHighscore.h  CIQPuzzle.cpp  CIQPuzzle.h  CIQPuzzle.ui  CMakeLists.txt  CSettings.cpp  CSettings.h  CSettings.ui  Doxyfile  README.md  _config.yml  appveyor.yml  block.cpp  block.h  board.cpp  board.h  boarddialog.cpp  boarddialog.h  boardpreview.cpp  boardpreview.h  boardpreview.ui  boardselection.cpp  boardselection.h  boardselection.ui  changelog  control  copyright  create-level.html  (+27 more)
.github/workflows/: appimage.yml  ci.yml  clang-format-check.yml  codeberg-mirror.yml  codeql-analysis.yml  macos.yml  windows.yml
AppImage/: appimage.yml  build_AppImage.sh
Flatpak/: com.github.elth0r0.iqpuzzle.yml  page.codeberg.elth0r0.iqpuzzle.yml
Windows/: ReadMe.txt  iqpuzzle.nsi  removeprevious.nsh
_layouts/: default.html
apport/: iqpuzzle-crashdb.conf  source_iqpuzzle.py
arch_linux/: PKGBUILD
boards/: board_001.conf  board_002.conf  board_003.conf  board_004.conf  board_005.conf  board_006.conf  board_007.conf  board_008.conf  board_009.conf  board_010.conf  board_011.conf  board_012.conf  board_013.conf  board_014.conf  board_015.conf  board_016.conf  board_017.conf  board_018.conf  board_019.conf  board_020.conf  board_021.conf  board_022.conf  board_023.conf  board_024.conf  board_025.conf  board_026.conf  board_027.conf  board_028.conf  board_029.conf  board_030.conf  board_031.conf  board_032.conf  board_035.conf  board_040.conf  board_041.conf  board_044.conf
data/: data.qrc  iqpuzzle.desktop  os2.rc  win.rc
data/boards/: board_001.conf  board_004.conf  board_006.conf  board_009.conf  board_011.conf  board_020.conf  board_028.conf  board_029.conf  board_030.conf  board_034.conf  board_043.conf  board_047.conf  board_050.conf  board_052.conf  board_054.conf  board_055.conf  board_058.conf  board_059.conf  board_060.conf
data/boards/alphabet/: A.conf  B.conf  C.conf  D.conf  E.conf  F.conf  G.conf  H.conf  I.conf  J.conf  K.conf  L.conf  M.conf  N.conf  O.conf  P.conf  Q.conf  R.conf  S.conf  T.conf  U.conf  V.conf  W.conf  X.conf  Y.conf  Z.conf
data/boards/alphabet2/: A2.conf  B2.conf  C2.conf  D2.conf  E2.conf  F2.conf  G2.conf  H2.conf  I2.conf  J2.conf  K2.conf  L2.conf  M2.conf  N2.conf  O2.conf  P2.conf  Q2.conf  R2.conf  S2.conf  T2.conf  U2.conf  V2.conf  W2.conf  X2.conf  Y2.conf  Z2.conf
data/boards/animals/: bat.conf  bird.conf  boar.conf  brachiosaurus.conf  bug.conf  bull.conf  butterfly.conf  camel.conf  camel2.conf  canary.conf  cat.conf  cat2.conf  cat3.conf  cat4.conf  chameleon.conf  chameleon2.conf  chick.conf  chicken.conf  chicken2.conf  chicken3.conf  crocodile.conf  crocodile2.conf  deer.conf  deer2.conf  deer3.conf  deer4.conf  dinosaurs.conf  dinosaurs2.conf  dog.conf  dog2.conf  dog3.conf  dog4.conf  dog5.conf  dolphin.conf  dromedary.conf  duck.conf  duck2.conf  eagle.conf  eagle2.conf  eagle3.conf  (+50 more)
data/boards/calendar/: calendar_day.conf  calendar_month_day.conf
data/boards/chess/: bishop.conf  king.conf  knight.conf  pawn.conf  queen.conf  rook.conf
data/boards/digits/: eight.conf  five.conf  four.conf  nine.conf  one.conf  seven.conf  six.conf  three.conf  two.conf  zero.conf
data/boards/freestyle/: freestyle_001.conf  freestyle_002.conf
data/boards/items/: arrow.conf  arrow2.conf  arrow3.conf  bomb.conf  car.conf  castle.conf  coffee.conf  crescent.conf  cross2.conf  cross3.conf  cross4.conf  cross5.conf  crown.conf  doll.conf  doublearrow.conf  euro.conf  flag.conf  flowerpot.conf  hammer.conf  helicopter.conf  house.conf  house2.conf  house3.conf  house4.conf  jack-o-lantern.conf  key.conf  lamp.conf  locomotive.conf  locomotive2.conf  locomotive3.conf  mask.conf  note.conf  padlock.conf  plane.conf  plane2.conf  questionmark.conf  rocket.conf  sailboat.conf  sailboat2.conf  sailboat3.conf  (+15 more)
data/boards/mini/: mini_002.conf  mini_003.conf  mini_004.conf  mini_005.conf  mini_006.conf  mini_007.conf  mini_008.conf  mini_009.conf
data/boards/misc/: misc_001.conf  misc_003.conf  misc_005.conf  misc_006.conf  misc_008.conf  misc_009.conf  misc_010.conf  misc_011.conf  misc_012.conf  misc_013.conf  misc_014.conf  misc_015.conf  misc_016.conf  misc_017.conf  misc_018.conf  misc_019.conf  misc_020.conf  misc_021.conf  misc_022.conf  misc_023.conf  misc_024.conf  misc_025.conf  misc_027.conf  misc_028.conf  misc_030.conf  misc_031.conf  misc_032.conf  misc_033.conf  (+9 more)
data/fallback-icons/: COPYING-ICONS
data/mac/: Info.plist
data/menu/: CREDITS
data/unix/: com.github.elth0r0.iqpuzzle.desktop  com.github.elth0r0.iqpuzzle.metainfo.xml  page.codeberg.elth0r0.iqpuzzle.desktop  page.codeberg.elth0r0.iqpuzzle.metainfo.xml
debian/: changelog  control  copyright  menu  rules  watch
debian_OBS/: changelog  iqpuzzle.dsc
ebuild/: iqpuzzle-0.10.0.ebuild  iqpuzzle-0.8.1.ebuild  iqpuzzle-0.9.0.ebuild  iqpuzzle-1.0.0.ebuild  iqpuzzle-1.0.1.ebuild  iqpuzzle-1.0.4.ebuild  iqpuzzle-1.0.5.ebuild
icons/: icon.icns
lang/: hangman_nl.qm  iqpuzzle_bg.qm  iqpuzzle_bg.ts  iqpuzzle_de.qm  iqpuzzle_de.ts  iqpuzzle_el_GR.qm  iqpuzzle_el_GR.ts  iqpuzzle_en.ts  iqpuzzle_es.ts  iqpuzzle_fr.qm  iqpuzzle_fr.ts  iqpuzzle_it.qm  iqpuzzle_it.ts  iqpuzzle_ko.qm  iqpuzzle_ko.ts  iqpuzzle_nb_NO.qm  iqpuzzle_nb_NO.ts  iqpuzzle_nl.qm  iqpuzzle_nl.ts  iqpuzzle_pt.qm  iqpuzzle_pt.ts  iqpuzzle_pt_BR.qm  iqpuzzle_pt_BR.ts  iqpuzzle_ru.qm  iqpuzzle_ru.ts  iqpuzzle_uk.qm  iqpuzzle_uk.ts  iqpuzzle_vi.ts  iqpuzzle_zh_CN.qm  iqpuzzle_zh_CN.ts  iqpuzzle_zh_TW.qm  iqpuzzle_zh_TW.ts  translations.qrc
macOS/: build_macOS.sh
man/: CMakeLists.txt
man/de/man1/: iqpuzzle.1
man/de/man6/: iqpuzzle.6
man/it/man6/: iqpuzzle.6
man/man1/: iqpuzzle.1
man/man6/: iqpuzzle.6
res/: Info.plist  iqpuzzle.appdata.xml  iqpuzzle.rc  iqpuzzle_os2.rc  iqpuzzle_resources.qrc  iqpuzzle_win.rc  translations.qrc
res/images/: icon.icns  iqpuzzle.xpm
rpm/: iqpuzzle.changes  iqpuzzle.spec
ubuntu/: install
(+82 files in other folders)
